[package]
name = "sentry-mirror"
version = "0.0.1"
edition = "2024"

[dependencies]
hyper = { version = "1.7.0", features = ["full"] }
tokio = { version = "1.48.0", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1.17", features = ["client", "http2", "http1"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_yaml = "0.9.17"
url = "2.5.7"
regex = "1.12.2"
clap = { version = "4.5.50", features = ["derive"] }
log = "0.4.28"
simple_logger = "5.0.0"
hyper-tls = "0.6.0"
serde_json = "1.0.145"
flate2 = "1.0.30"
futures = "0.3.31"
metrics = "0.24.2"
metrics-exporter-statsd = "0.9.0"
sentry = { version = "0.45.0", features = ["backtrace", "contexts", "debug-images", "panic", "transport", "tracing", "logs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["std", "env-filter", "json"] }
